--- a/TC01.md
+++ b/TC01.md
@@ -1,6 +1,6 @@
 ** Test Case Name : Portability **
-* Precondition :  สามารถติดตั้งในระบบ OS ต่างๆ และสามารถใช้ Function ต่างๆของโปรแกรมได้
-* Inputs :  1.MAC OS  2.Windows OS 
-* Actions :  Install Program
-* Expected Results :  สามารถติดตั้งใน ระบบ OS ต่างๆได้อย่างไม่มีปัญหา และสามารถใช้งาน Fuction ได้ 80% ของ Program
-* Postconditions :  สามารถ Run program  ได้ปกติ
+* **Precondition : **  สามารถติดตั้งในระบบ OS ต่างๆ และสามารถใช้ Function ต่างๆของโปรแกรมได้
+* **Inputs : **  1.MAC OS  2.Windows OS 
+* **Actions : ** Run Program
+* **Expected Results : **  สามารถติดตั้งใน ระบบ OS ต่างๆได้อย่างไม่มีปัญหา และสามารถใช้งาน Fuction ได้ 80% ของ Program
+* **Postconditions : ** สามารถ Run program  ได้ปกติ
