--- a/TC01.md
+++ b/TC01.md
@@ -1,8 +1,8 @@
 **Test Case Name : Portability**
 * **Precondition** :  2 PC installs with Difference OS & Minimum Hardward 
-                    * 1. Windows OS  &  Run Calculator-EditionX
-                    * 2. MAC OS &  Run Calculator-EditionX
-* **Actions** : Run Program Calculator-EditionX with 2 PC
+                    * 1. Windows OS  &  Run (Calculator-EditionX)
+                    * 2. MAC OS &  Run (Calculator-EditionX)
+* **Actions** : Run Program (Calculator-EditionX) with 2 PC
 * **Inputs** : 5+5 , 5-5, 5*5, 5/5
 * **Expected Results** : Result is 10, 0, 25, 1 & Not Float
-* **Postconditions** :  Run Calculator-EditionX smoothly & Result Correct
+* **Postconditions** :  Run (Calculator-EditionX) smoothly & Result Correct
