--- a/TC01.md
+++ b/TC01.md
@@ -1,7 +1,7 @@
 **Test Case Name : Portability**
 * **Precondition** :  2 PC installs with Difference OS & Minimum Hardward 
-                    <br/>1. Windows OS  &  Run (Calculator-EditionX)
-                    <br/>2. MAC OS &  Run (Calculator-EditionX)
+                    <br>1. Windows OS  &  Run (Calculator-EditionX)
+                    <br>2. MAC OS &  Run (Calculator-EditionX)
 * **Actions** : Run Program (Calculator-EditionX) with 2 PC
 * **Inputs** : 5+5 , 5-5, 5*5, 5/5
 * **Expected Results** : Result is 10, 0, 25, 1 & Not Float
