--- a/TC02.md
+++ b/TC02.md
@@ -1,1 +1,6 @@
-**Test Case : Invalid Aur**
+**Test Case : Invalid Aurthentication With DUO Security**
+  * **Precondition : **
+  * **Actions : **
+  * **Inputs : **
+  * **Expected Results : **
+  * **Postconditions : **
