--- a/TC02.md
+++ b/TC02.md
@@ -1,6 +1,6 @@
 **Test Case : Invalid Aurthentication With DUO Security**
   * **Precondition :** 
-    1 Already have User on GITHUB
+    * Already have User on GITHUB
   * **Actions :** 
   * **Inputs :**
   * **Expected Results :**
