--- a/TC02.md
+++ b/TC02.md
@@ -1,7 +1,17 @@
-**Test Case : Invalid Aurthentication With DUO Security**
+**Test Case : Invalid Authentication With DUO Security**
   * **Precondition :** 
-    * Already have User on GITHUB
-  * **Actions :** 
-  * **Inputs :**
-  * **Expected Results :**
+    * Already have user on GITHUB
+    * Enable two factor authentication in Settting > Security
+    * Already install app <DUO Security> on mobile
+ 
+  * **Actions :**
+    * 1. Use  Fault Username&Password
+    * 2. Use  Correct Username&Password  and Fault Authentication code
+    
+  * **Inputs :** User: ZabZaX2  on github
+  
+  * **Expected Results :**  
+    * 1. Alert User or Password wrong
+    * 2. Fail Authentication code
+    
   * **Postconditions :**
