--- a/TC02.md
+++ b/TC02.md
@@ -1,8 +1,8 @@
 **Test Case : Invalid Authentication With DUO Security**
   * **Precondition :** 
-    * Already have user on GITHUB
-    * Enable two factor authentication in Settting > Security
-    * Already install app <DUO Security> on mobile
+    * 1. Already have user on GITHUB
+    * 2. Enable two factor authentication in Settting > Security
+    * 3. Already install app <DUO Security> on mobile
  
   * **Actions :**
     * 1. Use  Fault Username&Password
