--- a/TC02.md
+++ b/TC02.md
@@ -5,13 +5,12 @@
     * 3. Already install app <DUO Security> on mobile
  
   * **Actions :**
-    * 1. Use  Fault Username&Password
-    * 2. Use  Correct Username&Password  and Fault Authentication code
+    * 1. Use  Correct Username&Password
+    * 2. Use  Fault Authentication code
     
   * **Inputs :** User: ZabZaX2  on github
   
   * **Expected Results :**  
-    * 1. Alert User or Password wrong
-    * 2. Fail Authentication code
+    *  Alert Fail Authentication code
     
-  * **Postconditions :**
+ 
