--- a/TC02.md
+++ b/TC02.md
@@ -1,4 +1,4 @@
-**Test Case : Invalid Authentication With DUO Security**
+**Test Case : Invalid Authentication on GitHub With DUO Security**
   * **Precondition :** 
     * 1. Already have user on GITHUB
     * 2. Enable two factor authentication in Settting > Security
