--- a/TC02.md
+++ b/TC02.md
@@ -2,7 +2,7 @@
   * **Precondition :** 
     * 1. Already have user on GITHUB
     * 2. Enable two factor authentication in Settting > Security
-    * 3. Already install app <DUO Security> on mobile
+    * 3. Already install app DUO Security on mobile
  
   * **Actions :**
     * 1. Use  Correct Username&Password
