--- a/TC03-9.1.1.md
+++ b/TC03-9.1.1.md
@@ -1,4 +1,19 @@
 **V9.1 Communications Security Requirements**<br>
-**9.1.1 Verify that secured TLS is used for all client connectivity, and does not fall back to
-insecure or unencrypted protocols.**<br>
-**TEST CASE**
+* **9.1.1 Verify that secured TLS is used for all client connectivity, and does not fall back to
+insecure or unencrypted protocols.**<br><br>
+**TEST CASE : Communications Security with TLS **
+* **Precondition :** 
+    1. login line application in PC
+    2. open wireshark 
+     
+  * **Actions :**
+    1 Run start capturing packets on wireshark
+    2 send message on Line application to another Line id
+    
+    
+  * **Inputs :** messages 
+  
+  * **Expected Results :**  
+  <br>![Line_msg](line_msg.jpg)<br>
+    
+
