--- a/TC03-9.1.1.md
+++ b/TC03-9.1.1.md
@@ -3,12 +3,12 @@
 insecure or unencrypted protocols.**<br><br>
 **TEST CASE : Communications Security with TLS **
 * **Precondition :** 
-    1. login line application in PC
-    2. open wireshark 
+    1.1 login line application in PC
+    1.2 open wireshark 
      
   * **Actions :**
-    1 Run start capturing packets on wireshark
-    2 send message on Line application to another Line id
+    2.1 Run start capturing packets on wireshark
+    2.2 send message on Line application to another Line id
     
     
   * **Inputs :** messages 
