--- a/TC03-9.1.1.md
+++ b/TC03-9.1.1.md
@@ -1,19 +1,16 @@
 **V9.1 Communications Security Requirements**<br>
-* **9.1.1 Verify that secured TLS is used for all client connectivity, and does not fall back to
-insecure or unencrypted protocols.**<br><br>
-**TEST CASE : Communications Security with TLS **
-* **Precondition :** 
-    1.1 login line application in PC
-    1.2 open wireshark 
+
+**TEST CASE : Communications Security with TLS **<br>
+**1.Precondition :**<br> 
+    1.1.1 login line application in PC <br>
+    1.1.2 open wireshark <br>
      
-  * **Actions :**
-    2.1 Run start capturing packets on wireshark
-    2.2 send message on Line application to another Line id
-    
-    
-  * **Inputs :** messages 
+ **2.Actions :**<br>
+    2.1.1 Run start capturing packets on wireshark<br>
+    2.2.1 send message on Line application to another Line id<br>
+        
+  **3.Inputs :** messages <br>
   
-  * **Expected Results :**  
+  **Expected Results :**  <br>
   <br>![Line_msg](line_msg.jpg)<br>
     
-
