--- a/TC03-9.1.1.md
+++ b/TC03-9.1.1.md
@@ -2,12 +2,12 @@
 
 **TEST CASE : Communications Security with TLS **<br>
 **1.Precondition :**<br> 
-    1.1.1 login line application in PC <br>
-    1.1.2 open wireshark <br>
+    1. login line application in PC <br>
+    2 open wireshark <br>
      
  **2.Actions :**<br>
-    2.1.1 Run start capturing packets on wireshark<br>
-    2.2.1 send message on Line application to another Line id<br>
+    1. Run start capturing packets on wireshark<br>
+    2. send message on Line application to another Line id<br>
         
   **3.Inputs :** messages <br>
   
