--- a/TC03-9.1.1.md
+++ b/TC03-9.1.1.md
@@ -1,15 +1,15 @@
 **V9.1 Communications Security Requirements** <br>
 
 **TEST CASE : Communications Security with TLS** <br>
-**1.Precondition :**<br> 
+**Precondition :**<br> 
     1. login line application in PC <br>
     2 open wireshark <br>
      
- **2.Actions :**<br>
+ **Actions :**<br>
     1. Run start capturing packets on wireshark<br>
     2. send message on Line application to another Line id<br>
         
-  **3.Inputs :** messages <br>
+  **Inputs :** messages <br>
   
   **Expected Results :**  <br>
   <br>![Line_msg](line_msg.jpg)<br>
