--- a/TC03-9.1.1.md
+++ b/TC03-9.1.1.md
@@ -3,7 +3,7 @@
 **TEST CASE : Communications Security with TLS** <br>
 **Precondition :**<br> 
     1. login line application in PC <br>
-    2 open wireshark <br>
+    2. open wireshark <br>
      
  **Actions :**<br>
     1. Run start capturing packets on wireshark<br>
